excluded .ds-store and fixed z-index problems

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -67,10 +67,12 @@ a {
 @keyframes fadeIn {
   from {
     opacity: 0;
+    z-index: 1;
   }
 
   to {
     opacity: 1;
+    z-index: 1;
   }
 }
 
